--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
@@ -41,3 +42,18 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase credentials
+**/google-services.json
+**/GoogleService-Info.plist
+
+# Environment secrets
+.env
+
+# Android keystore files
+**/key.properties
+
+# iOS certificates
+ios/**/*.cer
+ios/**/*.p12
+ios/**/Profile/*.mobileprovision
